[tool.poetry]
name = "app"
version = "0.1.0"
description = "Poetry Lab"
authors = ["ManuelSLemos <iam@manuelslemos.es>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
start = 'app.main:main'

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
